# docker-ps-cli

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yaml
docker_ps_cli/: __init__.py  cli.py  main.py  mappings.py
docker_ps_cli/utils/: argparser.py  columns.py  filtering.py  logger.py  styling.py
