[project]
name = "docker-ps-cli"
version = "1.0.0"
description = "List your docker containers in a better way!"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich>=14.0.0",
]
license = "GPL-3.0-or-later"
license-files = [
    "LICENSE"
]
authors = [
    { name = "Mert Emirimam", email = "48881002+mertemr@users.noreply.github.com"},
]
keywords = ["docker", "cli", "containers"]
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/mertemr/docker-ps-cli"
"Bug Tracker" = "https://github.com/mertemr/docker-ps-cli/issues"

[project.scripts]
docker-ps-cli = "docker_ps_cli.main:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = [".venv", "dist"]
fix = true
unsafe-fixes = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
preview = true

[tool.ruff.lint]
select = ["B","C90","E","F","I","TRY","ANN","N"]
ignore = []

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]
